overflow visible and position fixed on wider versions

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@ body {
 	margin: 0;
 	padding: 0;
 	overscroll-behavior: none;
-	overflow: hidden;
-	/* overflow: visible; */
+	/* overflow: hidden; */
+	overflow: visible;
 	font-family: 'EB Garamond', serif;
 }
 
